# miso-websocket

./: .gitignore  Makefile  README.md  cabal.project  miso-websocket.cabal
.github/workflows/: main.yml
assets/: style.css
src/: Main.hs  WebSocket.hs
static/: index.html
