cabal-version:          3.0
name:                   miso-websocket
version:                0.1

common warnings
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

executable app
  import:
    wasm, warnings
  hs-source-dirs:
    src
  other-modules:
    WebSocket
  main-is:
    Main.hs
  build-depends:
    base, aeson, miso, mtl, jsaddle, containers
  default-language:
    GHC2021
  default-extensions:
    CPP TemplateHaskell
